[tool.poetry]
name = "my-package"
version = "0.1.2"
description = "Python template repository"
license = "Proprietary"
authors = [
    "James Owler <james.owler@novai.co.uk>",
    ]
packages = [
    { include = "my_package" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
yapf = "^0.32.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
hello = "my_package.hello:print_hello"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
